<resources>
    <string name="app_name">BulletinBoard</string>

    <string name="ads">Объявления</string>
    <string name="my_ads">Мои объявления</string>
    <string name="cars">Машины</string>
    <string name="pc">Компьютеры</string>
    <string name="smartphones">Смартфоны</string>
    <string name="appliances">Бытовая техника</string>

    <string name="account">Аккаунт</string>
    <string name="sign_up">Регистрация</string>
    <string name="sign_in">Вход</string>
    <string name="sign_out">Выход</string>
    <string name="not_auth">Войдите или зарегистрируйтесь!</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="sign_up_action">Зарегистрироваться</string>
    <string name="sign_in_action">Войти</string>
    <string name="forget_password">Забыли пароль?</string>
    <string name="sign_up_error">Не удалось зарегистрироваться</string>
    <string name="sign_in_error">Не удалось войти</string>
    <string name="send_verification_email_error">Не удалось отправить email для подтверждения</string>
    <string name="send_verification_email_success">На Вашу почту было отправлено письмо...</string>
    <string name="email_reset_password_was_sent">Reset Email was sent!</string>
    <string name="dialog_reset_email_message">Для восстановления пароля укажите Ваш email</string>

    <string name="link_done">Email успешно подключен к Google аккаунту</string>
    <string name="enter_to_g">У Вас уже есть аккаунт с этим Email адресом</string>

    <string name="select_country">*Выберите страну</string>
    <string name="select_city">*Выберите город</string>

</resources>