<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/ads" >
        <menu>
            <item
                android:id="@+id/my_ads"
                android:title="@string/my_ads" />
            <item
                android:id="@+id/cars"
                android:title="@string/cars" />
            <item
                android:id="@+id/pc"
                android:title="@string/pc" />
            <item
                android:id="@+id/smartphones"
                android:title="@string/smartphones" />
            <item
                android:id="@+id/appliances"
                android:title="@string/appliances" />
        </menu>
    </item>

    <item android:title="@string/account">
        <menu>
            <item
                android:id="@+id/sign_up"
                android:title="@string/sign_up" />
            <item
                android:id="@+id/sign_in"
                android:title="@string/sign_in" />
            <item
                android:id="@+id/sign_out"
                android:title="@string/sign_out" />
        </menu>
    </item>

</menu>