<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/sign_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/sign_email_ed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="text|textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_title_tv" />

    <EditText
        android:id="@+id/sign_password_ed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_email_ed" />

    <Button
        android:id="@+id/sign_up_in_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/sign_up_action"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/sign_email_ed"
        app:layout_constraintStart_toStartOf="@+id/sign_email_ed"
        app:layout_constraintTop_toBottomOf="@+id/sign_password_ed" />

    <Button
        android:id="@+id/forget_password_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/sign_email_ed"
        app:layout_constraintStart_toStartOf="@+id/sign_email_ed"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_in_btn" />
</androidx.constraintlayout.widget.ConstraintLayout>